# E-commerce.SkyPro

./: README.md  main.py  pyproject.toml  requirements.txt
src/: classes.py  json_loads.py  mixinlog.py
tests/: test_classes.py  test_json_loads.py
