[tool.poetry]
name = "e-shopproject"
version = "0.1.0"
description = ""
authors = ["Victoria_Zhuravleva <new.juravlik1334@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119

[tool.mypy]
disallow_untyped_defs=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
